# BigData

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mlflow  README.md  check_model.py  docker-compose.yml  main.py  pyproject.toml
src/app/: dashboard.py  dashboard_old.py.backup
src/core/: azure_storage.py  data_build.py  mlflow_utils.py  model_io.py  settings.py  test_model.py
src/jobs/: step1_select_repos (1).py  step2_daily_collector (1).py  step3_analyze_data (1).py  step4_train_model.py  step4b_train_classifier.py  step5_predict_monitor.py  step6_backtest.py  step6b_backtest_classifier.py
